force-app/main/default/objects/Contact/fields/Prospective_LO_Status__c.field-meta.xml
<CustomField>
    <fullName>Prospective_LO_Status__c</fullName>
    <label>Prospective LO Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Contacting</fullName>
            </value>
            <value>
                <fullName>Negotiating</fullName>
            </value>
            <value>
                <fullName>Offer Made</fullName>
            </value>
            <value>
                <fullName>Not a Fit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>