force-app/main/default/objects/Contact/fields/ProspectiveLO__c.field-meta.xml
<CustomField>
    <fullName>ProspectiveLO__c</fullName>
    <formula>INCLUDES(Type__c, &apos;Prospective LO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProspectiveLO</label>
    <type>Checkbox</type>
</CustomField>