force-app/main/default/objects/Contact/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <description>This field will be used to track the race of borrowers and co-borrowers.  Currently set to match the number of the origination system.</description>
    <label>Race</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>American Indian or Alaskan Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Other Pacific Islander Or None Selected</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Do not wish to furnish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>