force-app/main/default/objects/Contact/fields/Rate_Scenario_3__c.field-meta.xml
<CustomField>
    <fullName>Rate_Scenario_3__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>