force-app/main/default/objects/Contact/fields/RateScenario3__c.field-meta.xml
<CustomField>
    <fullName>RateScenario3__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>