force-app/main/default/objects/Contact/fields/Realtor__c.field-meta.xml
<CustomField>
    <fullName>Realtor__c</fullName>
    <formula>INCLUDES(Type__c, &apos;Realtor&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Realtor</label>
    <type>Checkbox</type>
</CustomField>