force-app/main/default/objects/Contact/fields/Referred_By_Text_Value__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Text_Value__c</fullName>
    <formula>Referred_by__r.FirstName + &quot; &quot; + Referred_by__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referred By Text Value</label>
    <type>Text</type>
</CustomField>