force-app/main/default/objects/Contact/fields/RETR_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>RETR_Agent_ID__c</fullName>
    <label>RETR Agent ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>