force-app/main/default/objects/Contact/fields/RETR_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>RETR_Profile_URL__c</fullName>
    <label>RETR Profile URL</label>
    <type>Url</type>
</CustomField>