force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Co-Borrower</fullName>
            </value>
            <value>
                <fullName>Escrow Officer</fullName>
            </value>
            <value>
                <fullName>Realtor - Buyer</fullName>
            </value>
            <value>
                <fullName>Realtor - Seller</fullName>
            </value>
            <value>
                <fullName>Insurance Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>