force-app/main/default/objects/Contact/fields/ScenarioType__c.field-meta.xml
<CustomField>
    <fullName>ScenarioType__c</fullName>
    <label>Scenario Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>