force-app/main/default/objects/Contact/fields/SelectedProperty__c.field-meta.xml
<CustomField>
    <fullName>SelectedProperty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Properties__c.Household__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Properties__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>