force-app/main/default/objects/Contact/fields/Seller_Sides__c.field-meta.xml
<CustomField>
    <fullName>Seller_Sides__c</fullName>
    <inlineHelpText>Number of seller sides in the 12 mo preceding Export Date</inlineHelpText>
    <label>Seller Sides</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>