force-app/main/default/objects/Contact/fields/Seller_Volume__c.field-meta.xml
<CustomField>
    <fullName>Seller_Volume__c</fullName>
    <inlineHelpText>Seller side volume in the 12 mo preceding Export Date</inlineHelpText>
    <label>Seller Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>