force-app/main/default/objects/Contact/fields/Service_Branch__c.field-meta.xml
<CustomField>
    <fullName>Service_Branch__c</fullName>
    <label>Service Branch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Army</fullName>
            </value>
            <value>
                <fullName>Navy</fullName>
            </value>
            <value>
                <fullName>Air Force</fullName>
            </value>
            <value>
                <fullName>Marine Corps</fullName>
            </value>
            <value>
                <fullName>Coast Guard</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>