force-app/main/default/objects/Contact/fields/Solidify_Score__c.field-meta.xml
<CustomField>
    <fullName>Solidify_Score__c</fullName>
    <formula>pi__score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solidify Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>