force-app/main/default/objects/Contact/fields/Subject_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Subject_Property_Type__c</fullName>
    <label>Subject Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detached</fullName>
            </value>
            <value>
                <fullName>Multi-Family</fullName>
            </value>
            <value>
                <fullName>Condo</fullName>
            </value>
            <value>
                <fullName>Detached Condominium</fullName>
            </value>
            <value>
                <fullName>PUD</fullName>
            </value>
            <value>
                <fullName>Attached</fullName>
            </value>
            <value>
                <fullName>Manufactured Home</fullName>
            </value>
            <value>
                <fullName>High Rise Condominium</fullName>
            </value>
            <value>
                <fullName>Modular/Pre-Fab</fullName>
            </value>
            <value>
                <fullName>Cooperative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>