force-app/main/default/objects/Contact/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <inlineHelpText>Tags from the data source</inlineHelpText>
    <label>Tags</label>
    <length>30</length>
    <type>Text</type>
</CustomField>