force-app/main/default/objects/Contact/fields/Temp_City__c.field-meta.xml
<CustomField>
    <fullName>Temp_City__c</fullName>
    <label>Temp City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>