force-app/main/default/objects/Contact/fields/Temp_Postal__c.field-meta.xml
<CustomField>
    <fullName>Temp_Postal__c</fullName>
    <label>Temp Postal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>