force-app/main/default/objects/Contact/fields/Temp_State__c.field-meta.xml
<CustomField>
    <fullName>Temp_State__c</fullName>
    <label>Temp State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>