force-app/main/default/objects/Contact/fields/Temp_Street__c.field-meta.xml
<CustomField>
    <fullName>Temp_Street__c</fullName>
    <label>Temp Street</label>
    <type>TextArea</type>
</CustomField>