force-app/main/default/objects/Contact/fields/Term_Due_Scenario_2__c.field-meta.xml
<CustomField>
    <fullName>Term_Due_Scenario_2__c</fullName>
    <label>Term/Due (Years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>