force-app/main/default/objects/Contact/fields/Total_Interest_Scenario_1__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Scenario_1__c</fullName>
    <description>This a simple way of re-creating the “CUMIPMT” formula of Excel, it will just consider the entire term instead of a specific time period within it (ie months 60-120).</description>
    <formula>( Monthly_Payment_Scenario_1__c   *   Term_Due_Scenario_1__c * 12)  -    First_Loan_Amount_Scenario_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Interest Scenario 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>