force-app/main/default/objects/Contact/fields/TotalFeesS2__c.field-meta.xml
<CustomField>
    <fullName>TotalFeesS2__c</fullName>
    <formula>IF((DiscountCreditS2__c+LenderFeeS2__c+AppraisalFeeS2__c+CreditReportFeeS2__c+EscrowFeesS2__c+TitleFeeS2__c+RecordingFeeS2__c)&gt;0,DiscountCreditS2__c+LenderFeeS2__c+AppraisalFeeS2__c+CreditReportFeeS2__c+EscrowFeesS2__c+TitleFeeS2__c+RecordingFeeS2__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>