force-app/main/default/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
                <default>true</default>
                <label>Client</label>
            </value>
            <value>
                <fullName>Realtor</fullName>
            </value>
            <value>
                <fullName>Escrow Officer</fullName>
            </value>
            <value>
                <fullName>Lender AE</fullName>
            </value>
            <value>
                <fullName>Insurance Agent</fullName>
            </value>
            <value>
                <fullName>Lender_Ops</fullName>
                <label>Lender - Ops</label>
            </value>
            <value>
                <fullName>Financial Advisor</fullName>
                <label>Financial Advisor / Planner</label>
            </value>
            <value>
                <fullName>Referral Partner - Other</fullName>
            </value>
            <value>
                <fullName>Appraiser</fullName>
            </value>
            <value>
                <fullName>Loan Originator / Broker</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Prospective LO</fullName>
            </value>
            <value>
                <fullName>Prospective TM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>