force-app/main/default/objects/Contact/fields/UFMIPFFS1__c.field-meta.xml
<CustomField>
    <fullName>UFMIPFFS1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>UFMIP/FF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>