force-app/main/default/objects/Contact/fields/VA_Loan_Count__c.field-meta.xml
<CustomField>
    <fullName>VA_Loan_Count__c</fullName>
    <inlineHelpText>Num of VA loans found for agent&apos;s purchases in the 12 mo preceding Export Date</inlineHelpText>
    <label>VA Loan Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>