force-app/main/default/objects/Contact/fields/X21_Day_Checkbox_for_Pardot__c.field-meta.xml
<CustomField>
    <fullName>X21_Day_Checkbox_for_Pardot__c</fullName>
    <formula>Days_Since_Last_Activity__c  &lt;= 21</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>21 Day Checkbox for Pardot</label>
    <type>Checkbox</type>
</CustomField>