force-app/main/default/objects/Contact/fields/Years_in_Work__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Work__c</fullName>
    <label>Years in Work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>