force-app/main/default/objects/Contact/fields/Years_on_Job__c.field-meta.xml
<CustomField>
    <fullName>Years_on_Job__c</fullName>
    <label>Years on Job</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>