force-app/main/default/objects/Contact/fields/Years_Remaining_on_Current_Loan__c.field-meta.xml
<CustomField>
    <fullName>Years_Remaining_on_Current_Loan__c</fullName>
    <formula>Current_Loan_Payments_Remaining__c/12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Years Remaining on Current Loan</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>