force-app/main/default/objects/Contact/fields/zCurrent_Weekday__c.field-meta.xml
<CustomField>
    <fullName>zCurrent_Weekday__c</fullName>
    <description>This field is only used for reporting filters and should not be displayed on the UI.</description>
    <formula>CASE(MOD(TODAY()-DATE(1900, 1, 7), 7), 
0, &quot;Sunday&quot;, 
1, &quot;Monday&quot;, 
2, &quot;Tuesday&quot;, 
3, &quot;Wednesday&quot;, 
4, &quot;Thursday&quot;, 
5, &quot;Friday&quot;, 
6, &quot;Saturday&quot;, 
null 
)</formula>
    <label>zCurrent Weekday</label>
    <type>Text</type>
</CustomField>