force-app/main/default/objects/Contact/fields/Zillow_Link__c.field-meta.xml
<CustomField>
    <fullName>Zillow_Link__c</fullName>
    <formula>HYPERLINK(SUBSTITUTE(&quot;https://www.zillow.com/homes/&quot; + SUBSTITUTE( Present_Address__c, &quot; &quot;, &quot;%20&quot;) + &quot;,%20&quot; + SUBSTITUTE( Present_Address_City__c,&quot; &quot;, &quot;%20&quot;) + &quot;,%20&quot; +  Present_Address_State__c + &quot;,%20&quot; +  Present_Address_Zip__c  + &quot;_rb&quot;, &quot; &quot;, &quot;%20&quot;), &quot;Zillow Value&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zillow Link</label>
    <type>Text</type>
</CustomField>