force-app/main/default/objects/Contact/listViews/All_My_Contacts.listView-meta.xml
<ListView>
    <fullName>All_My_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Contact_Status__c</field>
        <operation>notEqual</operation>
        <value>Inactive,Fired,Deceased</value>
    </filters>
    <label>4. My Active Contacts</label>
</ListView>