force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Loan_Originator__c</columns>
    <columns>Email_2__c</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>Home_Phone__c</columns>
    <columns>Days_Since_Last_Activity__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>Type__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>pi__score__c</columns>
    <filterScope>Everything</filterScope>
    <label>5. All My Contacts</label>
</ListView>