force-app/main/default/objects/Contact/listViews/Employer_Name_Contains.listView-meta.xml
<ListView>
    <fullName>Employer_Name_Contains</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Employer_Name__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Employer_Name__c</field>
        <operation>contains</operation>
    </filters>
    <label>Employer Name Contains</label>
</ListView>