force-app/main/default/objects/Contact/listViews/Lender_Reps.listView-meta.xml
<ListView>
    <fullName>Lender_Reps</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Type__c</columns>
    <columns>Contact_Status__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>includes</operation>
        <value>Lender AE</value>
    </filters>
    <filters>
        <field>Contact_Status__c</field>
        <operation>notEqual</operation>
        <value>Inactive,Fired,Deceased</value>
    </filters>
    <label>Lender Reps</label>
</ListView>