force-app/main/default/objects/Contact/listViews/My_Financial_Planners_Advisor_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Financial_Planners_Advisor_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Financial Advisor</value>
    </filters>
    <label>My Financial Planners / Advisor Contacts</label>
</ListView>