force-app/main/default/objects/Contact/listViews/My_Other_Referral_Partners.listView-meta.xml
<ListView>
    <fullName>My_Other_Referral_Partners</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Referral Partner - Other</value>
    </filters>
    <label>My Other Referral Partners</label>
</ListView>