force-app/main/default/objects/Contact/listViews/My_Realtors.listView-meta.xml
<ListView>
    <fullName>My_Realtors</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>MD_Mailing_State__c</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>Contact_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Realtor</value>
    </filters>
    <label>2. My Realtors</label>
</ListView>