force-app/main/default/objects/Contact/listViews/My_Title_Escrow_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Title_Escrow_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>MD_Mailing_State__c</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>Contact_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Escrow Officer</value>
    </filters>
    <label>My Title &amp; Escrow Contacts</label>
</ListView>